<resources>
    <string name="app_name">Travel App</string>
    <string name="section1_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section2_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section3_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section4_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section5_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section6_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section7_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section8_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section9_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="section10_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
        Cras venenatis euismod malesuada. Curabitur tincidunt neque vitae semper placerat.
    </string>
    <string name="description">
        Cambodia is a treasure trove of historical sites, vibrant cities, and stunning natural landscapes.
    </string>
    <string name="back">Back</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="intent_main_activity">Intent Main Activity</string>
    <string name="list_item">List Item</string>
    <string name="place1">Kampot</string>
    <string name="place2">Angkor Wat</string>
    <string name="place3">Battam Bong</string>
    <string name="place4">Kep</string>
    <string name="place5">Koh Rong</string>
    <string name="place6">Bangkok</string>
    <string name="country">Cambodia</string>
    <string name="country2">Thailand</string>
    <string name="price1">$2-$5</string>
    <string name="price2">$5-$10</string>
    <string name="price3">$10-$15</string>
    <string name="price4">$15-$20</string>
    <string name="price5">$5-$10</string>
    <string name="price6">$8-$15</string>
    <string name="rate1">4.5</string>
    <string name="rate2">5.0</string>
    <string name="rate3">4.0</string>
    <string name="rate4">3.5</string>
    <string name="rate5">4.2</string>
    <string name="rate6">3.5</string>
    <string name="todo1">Yoga</string>
    <string name="todo2">Parachute</string>
    <string name="todo3">Ice Skate</string>
    <string name="todo4">Ball Paint</string>
    <string name="todo5">Jogging</string>
    <string name="todo6">Sleep</string>
    <string name="thing_todo">Things to do</string>
    <string name="must_visit">Must Visit</string>
    <string name="city_details">City Details</string>
    <string name="population">Population</string>
    <string name="total_population">8,305K+</string>
    <string name="language">Language</string>
    <string name="languages">Khmer/English</string>
    <string name="riel">Riel</string>
    <string name="currency">Currency</string>
</resources>