<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="81dp"
                android:layout_height="109dp"
                android:layout_marginBottom="34dp"
                android:scaleType="centerCrop"
                android:src="@drawable/aeu" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <Switch
                android:id="@+id/remember"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/remember" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:onClick="onLogin"
                android:text="@string/login" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
