<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListItemActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image1"
                    android:onClick="openItemDetailActivity"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="4dp"
                    android:padding="4dp"
                    android:text="@string/section1_text"
                    android:textSize="14sp"
                    android:onClick="openItemDetailActivity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image2"
                    android:onClick="openItemDetailActivity"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/section2_text"
                    android:textSize="14sp"
                    android:lineSpacingExtra="4dp"
                    android:padding="4dp"
                    android:justificationMode="inter_word"
                    android:onClick="openItemDetailActivity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="126dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image3"
                    android:onClick="openItemDetailActivity"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/section3_text"
                    android:textSize="14sp"
                    android:lineSpacingExtra="4dp"
                    android:padding="4dp"
                    android:justificationMode="inter_word"
                    android:onClick="openItemDetailActivity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image1"
                    android:onClick="openItemDetailActivity"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="4dp"
                    android:padding="4dp"
                    android:text="@string/section1_text"
                    android:textSize="14sp"
                    android:onClick="openItemDetailActivity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="126dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image4"
                    android:onClick="openItemDetailActivity"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/section4_text"
                    android:textSize="14sp"
                    android:lineSpacingExtra="4dp"
                    android:padding="4dp"
                    android:justificationMode="inter_word"
                    android:onClick="openItemDetailActivity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image2"
                    android:onClick="openItemDetailActivity"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/section2_text"
                    android:textSize="14sp"
                    android:lineSpacingExtra="4dp"
                    android:padding="4dp"
                    android:justificationMode="inter_word"
                    android:onClick="openItemDetailActivity"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>