<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3e67f4"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/toMain"
                    android:layout_width="42dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0"
                    android:backgroundTint="@android:color/white"
                    android:onClick="onBackToMain"
                    android:shape="oval"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/city_details"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="42dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0"
                    android:backgroundTint="@android:color/white"
                    android:shape="oval"
                    android:text="?"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_content">

                <ImageView
                    android:id="@+id/placeImage"
                    android:layout_width="66dp"
                    android:layout_height="64dp"
                    android:scaleType="centerCrop"
                    android:shape="oval"/>

                <TextView
                    android:id="@+id/placeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/thing_todo"
                    android:layout_marginBottom="16dp"
                    tools:ignore="MissingConstraints" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:id="@+id/toDoList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="99dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal"
                            android:padding="0dp">
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/must_visit"
                    android:layout_marginBottom="16dp"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:id="@+id/morePlaces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>